--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Alex Garcia - github.io</title>title>
+	<title>Alex Garcia - github.io</title>
 </head>
 
 <body>
@@ -12,4 +12,4 @@
 
 </body>
 
-</html>html>
+</html>
