--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 
 <body>
   <header>
-    <h1>Hello! This is Alex.</h1>
+    <h1>Hello!</h1>
     <p>How you doin'?</p>
   </header>
+
+  <div>
+  	<h2>Who am I?</h2>
+  	<p>My name is Alex. I'm from Barcelona.</p>
+	</div>
 </body>
 	
-
 </html>
