No templates were harmed (well, maybe some)

--- a/index.html
+++ b/index.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
 <html>
+  
+  <head>
+    <title>Alex Garcia - github.io</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
+    <link href="style.css" type="text/css" rel="stylesheet">
+  </head>
+  
+  <body>
+    <div class="header">
+      <div class="container">
+        <h1>Alex</h1>
+        <p>DON'T PANIC</p>
+        <a class="btn" href="#">The nothing button</a>
+      </div>
+    </div>
 
-<head>
-  <title>Alex Garcia - github.io</title>
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
-</head>
+    <div class="nav">
+      <div class="container">
+        <ul>
+          <li>Alpha</li>
+          <li>Bravo</li>
+          <li>Charlie</li>
+          <li>Delta</li>
+          <li>Echo</li>
+        </ul>
+      </div>
+    </div>
 
-<body>
-  <header>
-    <h1>Hello!</h1>
-    <p>How you doin'?</p>
-  </header>
+    <div class="main">
+      <div class="container">
+        <img src="pictures/me.png" height="128" width="196">
+        <h2>Hello world</h2>
+        <p>Some random text.</p>
+        <p>Even <strong>more</strong> random text.</p>
+        <p>Just a little bit more. Yup, that's it.</p>
+      </div>
+    </div>
 
-  <div>
-  	<h2>Who am I?</h2>
-  	<p>My name is Alex. I'm from Barcelona.</p>
-	</div>
-</body>
-	
+    <div class="jumbotron">
+      <div class="container">
+        <h2>Who am I?</h2>
+        <p>Click the button and find out! (jk, it doesn't work lol)</p>
+        <a class="btn" href="#">Useless button #2</a>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="container">
+        <p>&copy; 2020, Alex Garcia</p>
+      </div>
+    </div>
+  </body>
 </html>
