--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Alex Garcia - github.io</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
   
   <body>
