--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Alex Garcia - github.io</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
-    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link href="/css/style.css" type="text/css" rel="stylesheet">
   </head>
   
   <body>
@@ -30,7 +30,7 @@
 
     <div class="main">
       <div class="container">
-        <img src="pictures/me.png" height="128" width="196">
+        <img src="pictures/me.png" height="196" width="196">
         <h2>Hello world</h2>
         <p>Some random text.</p>
         <p>Even <strong>more</strong> random text.</p>
