--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   
   <head>
     <title>Alex Garcia - github.io</title>
+    <link href="css/style.css" type="text/css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
-    <link href="/css/style.css" type="text/css" rel="stylesheet">
-  </head>
+      </head>
   
   <body>
     <div class="header">
