--- a/index.html
+++ b/index.html
@@ -1,55 +1,38 @@
 <!DOCTYPE html>
 <html>
-  
+
   <head>
-    <title>Alex Garcia - github.io</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
-      </head>
-  
+      <meta charset="UTF-8">
+      <title>Alex Garcia - Profile</title>
+      <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.0/css/all.min.css'>
+      <link rel="stylesheet" href="css/style.css">
+  </head>
   <body>
-    <div class="header">
-      <div class="container">
-        <h1>Alex</h1>
-        <p>DON'T PANIC</p>
-        <a class="btn" href="#">The nothing button</a>
-      </div>
-    </div>
 
-    <div class="nav">
-      <div class="container">
-        <ul>
-          <li>Alpha</li>
-          <li>Bravo</li>
-          <li>Charlie</li>
-          <li>Delta</li>
-          <li>Echo</li>
-        </ul>
+  <div class="card-container">
+      <span class="pro">Profile</span>
+      <img src="pictures/Alex.png" alt="user"/>
+      <h3>Alex Garcia</h3>
+      <h6>Barcelona, CAT</h6>
+      <p>Professional pizza muncher<br/>and (extremely) amateur programmer.</p>
+      <div class="buttons">
+          <button class="primary">
+              Message
+          </button>
+          <button class="primary ghost">
+              Following
+          </button>
       </div>
-    </div>
-
-    <div class="main">
-      <div class="container">
-        <img src="pictures/me.png" height="120" width="120">
-        <h2>Hello world</h2>
-        <p>Some random text.</p>
-        <p>Even <strong>more</strong> random text.</p>
-        <p>Just a little bit more. Yup, that's it.</p>
+      <div class="skills">
+          <h6>Skills</h6>
+          <ul>
+              <li>Cooking</li>
+              <li>Graphic design</li>
+              <li>Movie trivia</li>
+              <li>Crosswords</li>
+              <li>Yelling at clouds</li>
+          </ul>
       </div>
-    </div>
-
-    <div class="jumbotron">
-      <div class="container">
-        <h2>Who am I?</h2>
-        <p>Click the button and find out! (jk, it doesn't work lol)</p>
-        <a class="btn" href="#">Useless button #2</a>
-      </div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p>&copy; 2020, Alex Garcia</p>
-      </div>
-    </div>
+  </div>
   </body>
 </html>
