--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <li>Movie trivia</li>
                 <li>Crosswords</li>
                 <li>Yelling at clouds</li>
+                <li>LOL</li>
             </ul>
         </div>
     </div>
