--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <h6>Barcelona, CAT</h6>
         <p>Professional pizza muncher<br/>and (extremely) amateur programmer.</p>
         <div class="buttons">
-            <button class="primary">
-                Message
-            </button>
-            <button class="primary ghost">
-                Following
-            </button>
+          <a class="primary" href="https://github.com/alexgarmo" role="button">
+            GitHub
+          </a>
+          <a class="primary ghost" href="https://isitchristmas.com/" role="button">
+            Test
+          </a>
         </div>
         <div class="skills">
             <h6>Skills</h6>
@@ -36,4 +36,10 @@
         </div>
     </div>
   </body>
+
+  <footer>
+      <div class="rights">
+      </div>
+       <p>&copy; 2020, Alex Garcia</p>
+  </footer>
 </html>
